<resources>
    <string name="app_name">HomeWork 1</string>
    <string name="to_activity_1">To Log In Form</string>
    <string name="to_activity_2">To Activity 2</string>
    <string name="to_activity_3">To Activity 3</string>
    <string name="to_activity_4">To Activity 4</string>
    <string name="Registration">Регистрация</string>
    <string name="name">Name: </string>
    <string name="e_mail">E-mail: </string>
    <string name="password">Password:</string>
    <string name="confirm">Confirm:</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="sign_in">Войти</string>
</resources>