<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/toLogInActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:text="@string/to_activity_1"
        app:layout_constraintEnd_toStartOf="@+id/toActivity2Button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toActivity2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/to_activity_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toActivity3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to_activity_3"
        app:layout_constraintStart_toStartOf="@+id/toLogInActivityButton"
        app:layout_constraintTop_toBottomOf="@+id/toLogInActivityButton" />

    <Button
        android:id="@+id/toActivity4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to_activity_4"
        app:layout_constraintEnd_toEndOf="@+id/toActivity2Button"
        app:layout_constraintTop_toBottomOf="@+id/toActivity2Button" />
</androidx.constraintlayout.widget.ConstraintLayout>